--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -6,11 +6,12 @@ body {
 
 .pad-top-3rem {
     padding-top: 3rem;
-    background-color: #6885d6;
+    background-color: #ff5d4d;
 }
 
-.pad-top-zero {
+.main-bg {
 	padding-top: 0;
+	background-color: #ff5d4d;
 }
 
 .hidden {
